force-app/main/default/objects/Application_Log__b/Application_Log__b.object-meta.xml
<CustomObject>
    <label>Application Log</label>
    <pluralLabel>Application Logs</pluralLabel>
</CustomObject>