force-app/main/default/objects/Application_Log__b/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>