force-app/main/default/objects/Application_Log__b/fields/Related_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Id__c</fullName>
    <label>Related Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>